# User-Policy-Management

./: .gitignore  LICENSE  README.md  debug_policy.sh  populate_db.sh
backend/: .gitignore  Cargo.toml  docker-compose.yml
backend/src/: error.rs  lib.rs  main.rs
backend/src/database/: initialize.rs  mod.rs
backend/src/handlers/: emp_handlers.rs  mod.rs  policy_handlers.rs
backend/src/models/: emp.rs  mod.rs  policy.rs  utils.rs
frontend/: .env  index.html  package.json  pnpm-lock.yaml  prettier.config.js
frontend/.aye/: file_index.json
frontend/.aye/chroma_db/: chroma.sqlite3
frontend/.aye/snapshots/001_20251201T063620/: App.tsx  metadata.json
frontend/.aye/snapshots/002_20251201T064334/: Employees.tsx  Policies.tsx  metadata.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Button.tsx  Dropdown.tsx  Header.tsx  Layout.tsx  Modal.tsx  Navbar.tsx  SearchInput.tsx  Table.tsx  button.tsx
frontend/src/data/: mockData.ts
frontend/src/pages/: Dashboard.tsx  Employees.tsx  Policies.tsx  PolicySearch.tsx  Users.tsx
frontend/src/services/: api.ts
frontend/src/store/: employeesSlice.ts  policiesSlice.ts  store.ts
frontend/src/styles/: card.module.css  dashboard.css  main.css  navbar.module.css
frontend/src/types/: common.ts  context.ts  employee.ts  form.ts  index.ts  policy.ts  response.tsx  tables.ts  utils.ts
frontend/src/utils/: formConfig.ts
