[package]
name = "employee"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.100"
config = "0.15.18"
dotenvy = "0.15.7"
once_cell = "1.21.3"
serde = "1.0.228"
surrealdb = {version = "2.3.10", features = ["protocol-ws"]}
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
